// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus: app-framework > soft metrics 1`] = `
{
  "bends": 24,
  "crossings": 12,
}
`;

exports[`corpus: assistant > soft metrics 1`] = `
{
  "bends": 12,
  "crossings": 6,
}
`;

exports[`corpus: compute > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 11,
}
`;

exports[`corpus: echo > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 6,
}
`;

exports[`corpus: edge > soft metrics 1`] = `
{
  "bends": 28,
  "crossings": 17,
}
`;

exports[`corpus: pipeline > soft metrics 1`] = `
{
  "bends": 11,
  "crossings": 1,
}
`;
